<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.2</version>
	</parent>

	<groupId>no.nav.dokmet</groupId>
	<artifactId>dokmet</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>web</module>
	</modules>

	<properties>
		<java.version>17</java.version>
		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
		<jakarta-validation.version>2.0.2</jakarta-validation.version>
		<jakarta-inject.version>2.0.1</jakarta-inject.version>
		<token-support.version>2.1.3</token-support.version>
		<oracle.version>19.15.0.0.1</oracle.version>

		<!-- plugins -->
		<maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>

		<!-- test -->
		<h2.version>1.4.197</h2.version>
		<h2.jdbc.version>1.3.173</h2.jdbc.version>
		<token-support.version>2.1.3</token-support.version>
		<spring-cloud-starter-contract-stub-runner.version>3.0.3</spring-cloud-starter-contract-stub-runner.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokmet</groupId>
				<artifactId>app</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokmet</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokmet</groupId>
				<artifactId>web</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>jakarta.validation</groupId>
				<artifactId>jakarta.validation-api</artifactId>
				<version>${jakarta-validation.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.inject</groupId>
				<artifactId>jakarta.inject-api</artifactId>
				<version>${jakarta-inject.version}</version>
			</dependency>

			<!--Database-->
			<dependency>
				<groupId>com.oracle.database.jdbc</groupId>
				<artifactId>ojdbc10</artifactId>
				<version>${oracle.version}</version>
			</dependency>
			<dependency>
				<groupId>com.oracle.database.jdbc</groupId>
				<artifactId>ucp</artifactId>
				<version>${oracle.version}</version>
			</dependency>

			<!-- NAV-deps -->
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring</artifactId>
				<version>${token-support.version}</version>
			</dependency>

			<!-- logging -->
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>no.nav.security</groupId>
			<artifactId>token-validation-spring-test</artifactId>
			<version>${token-support.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${h2.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
			<version>${spring-cloud-starter-contract-stub-runner.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>17</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>